Added summaries and extended summaries to modules.

--- a/docstrings/interface/spice.yaml
+++ b/docstrings/interface/spice.yaml
@@ -1,3 +1,5 @@
+summary: "Interface to the SPICE package."
+
 extended_summary: |
   This module provides an interface to NAIF's ``SPICE`` package.
 
