--- a/docstrings/numerical_simulation/propagation_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/__package__.yaml
@@ -1,9 +1,13 @@
+summary : "Definition of propagation settings."
+
 extended_summary: |
-  This module consists of factory functions for setting up the
-  propagation component of a simulation.
+  This module contains submodules to define propagation settings. It also contains a set of factory functions to create
+  dynamical models for translational state, rotational state, and mass rate.
 
 
-###### enums
+
+
+  ###### enums
 
   # no enums
 
