--- a/environment.yaml
+++ b/environment.yaml
@@ -16,6 +16,7 @@ dependencies:
   - pytest
   - matplotlib # for tudat.plotting
   - basemap # for tudat.plotting
+  - basemap-data-hires # for tudat.plotting
   # Other doc related
   - jinja2
   - pyyaml
