--- a/docstrings/astro/time_conversion.yaml
+++ b/docstrings/astro/time_conversion.yaml
@@ -16,6 +16,10 @@ extended_summary: |
 notes: |
   - Unless specified otherwise, the time used in Tudatpy is in seconds since J2000, the 1st of January 2000.
 
+references: |
+  See ` this page <https://www.ucolick.org/~sla/leapsecs/timescales.html>`_, mainly based on IAU resolutions,
+  and references therein.
+
 #########################################################################
 #  ███████ ██    ██ ███    ██  ██████ ████████ ██  ██████  ███    ██
 #  ██      ██    ██ ████   ██ ██         ██    ██ ██    ██ ████   ██
