--- a/docstrings/astro/time_conversion.yaml
+++ b/docstrings/astro/time_conversion.yaml
@@ -52,6 +52,9 @@ functions:
         calendar_date = datetime.datetime(2022, 5, 21, 13, 52, 41)
         # Convert the calendar date to Julian days since January 1st 4713 BC 
         julian_date = time_conversion.calendar_date_to_julian_day(calendar_date)
+        # Print the converted output
+        print(julian_date)  # prints 2459721.0782523146
+
   #######################################################################
   - name: calendar_date_to_julian_day_since_epoch
     short_summary: "Convert a calendar date to Julian days since a given epoch."
@@ -63,8 +66,8 @@ functions:
         type: datetime.datetime
         description: "Datetime, using the default Python library. Both the date and the time (hour, minutes, and seconds), can be specified. Milliseconds are ignored."
       - name: epoch_since_julian_day_zero
-        type: float, default = 2451545.0
-        description: "Epoch since when the Julian days have to be counted. By default, set to 2451545.0, corresponding to the 1st of January 2000."
+        type: float, default = constants.JULIAN_DAY_ON_J2000
+        description: "Epoch since when the Julian days have to be counted. By default, set to `constants.JULIAN_DAY_ON_J2000` (2451545.0) corresponding to the 1st of January 2000."
 
     returns:
         type: float
@@ -78,7 +81,10 @@ functions:
         # Define the calendar date using datetime
         calendar_date = datetime.datetime(2022, 5, 21, 13, 52, 41)
         # Convert the calendar date to Julian days since J2000
-        julian_date = time_conversion.calendar_date_to_julian_day_since_epoch(calendar_date, 2451545.0)
+        julian_date = time_conversion.calendar_date_to_julian_day_since_epoch(calendar_date)
+        # Print the converted output
+        print(julian_date)  # prints 8176.07825231459
+
   #######################################################################
   - name: julian_day_to_calendar_date
     short_summary: "Convert Julian days to a calendar date."
@@ -103,6 +109,10 @@ functions:
         julian_date = 2459721.0783
         # Convert the Julian date to a calendar date
         calendar_date = time_conversion.julian_day_to_calendar_date(julian_date)
+        # Print the converted output
+        print(calendar_date)  # prints datetime.datetime(2022, 5, 21, 13, 52, 45)
+
+
   #######################################################################
   - name: julian_day_to_seconds_since_epoch
     short_summary: "Convert Julian days to seconds since a given epoch."
@@ -114,8 +124,8 @@ functions:
         type: float
         description: "Date in Julian days since January 1st 4713 BC."
       - name: epoch_since_julian_day_zero
-        type: float, default = 2451545.0
-        description: "Epoch since when the Julian days have to be counted. By default, set to 2451545.0, corresponding to the 1st of January 2000."
+        type: float, default = constants.JULIAN_DAY_ON_J2000
+        description: "Epoch since when the Julian days have to be counted. By default, set to `constants.JULIAN_DAY_ON_J2000` (2451545.0), corresponding to the 1st of January 2000."
 
     returns:
         type: float
@@ -129,7 +139,10 @@ functions:
         # Define the Julian date in days since January 1st 4713 BC
         julian_date = 2459721.0783
         # Convert the Julian date to the number of seconds since J2000
-        seconds_since_J2000 = time_conversion.julian_day_to_seconds_since_epoch(julian_date, 2451545.0)
+        seconds_since_J2000 = time_conversion.julian_day_to_seconds_since_epoch(julian_date)
+        # Print the converted output
+        print(seconds_since_J2000)  # prints 706413165.1200145
+
   #######################################################################
   - name: seconds_since_epoch_to_julian_years_since_epoch
     short_summary: "Convert the number of seconds since a given (unspecified) epoch to Julian years since the same epoch."
@@ -157,6 +170,9 @@ functions:
         seconds_since_epoch = 706413165.12
         # Convert the number of seconds to Julian years
         julian_years = time_conversion.seconds_since_epoch_to_julian_years_since_epoch(seconds_since_epoch)
+        # Print the converted output
+        print(julian_years)  # prints 22.38488240930869
+
   #######################################################################
   - name: seconds_since_epoch_to_julian_centuries_since_epoch
     short_summary: "Convert the number of seconds since a given (unspecified) epoch to Julian centuries since the same epoch."
@@ -184,6 +200,9 @@ functions:
         seconds_since_epoch = 706413165.12
         # Convert the number of seconds to Julian centuries
         julian_centuries = time_conversion.seconds_since_epoch_to_julian_centuries_since_epoch(seconds_since_epoch)
+        # Print the converted output
+        print(julian_centuries)  # prints 0.2238488240930869
+
   #######################################################################
   - name: julian_day_to_modified_julian_day
     short_summary: "Convert a Julian day to a Modified Julian day."
@@ -204,10 +223,10 @@ functions:
 
       .. code-block:: python
 
-        # Define J2000 in Julian Days
-        J2000 = 2451545.0
         # Convert from Julian Days to Modified Julian Days
-        MJD = time_conversion.julian_day_to_modified_julian_day(J2000)
+        MJD = time_conversion.julian_day_to_modified_julian_day(constants.JULIAN_DAY_ON_J2000)
+        # Print the converted output
+        print(MJD)  # prints 51544.5
   #######################################################################
   - name: modified_julian_day_to_julian_day
     short_summary: "Convert a Modified Julian day to a Julian day."
@@ -232,6 +251,9 @@ functions:
         J2000_MJD = 51544.5
         # Convert from Modified Julian Days to Julian Days
         J2000 = time_conversion.modified_julian_day_to_julian_day(J2000_MJD)
+        # Print the converted output
+        print(J2000)  # prints 2451545.0
+
   #######################################################################
   - name: calendar_date_to_day_of_year
     short_summary: "Determine the number of full days that have passed in the year of a given calendar date."
@@ -256,6 +278,9 @@ functions:
         date = datetime.datetime(2020, 5, 2)
         # Compute the number of full days that have passed in 2020 when at the given date
         days_passed = time_conversion.calendar_date_to_day_of_year(date)
+        # Print the converted output
+        print(J2000)  # prints 122.0
+
   #######################################################################
   - name: year_and_days_in_year_to_calendar_date
     short_summary: "Create the calendar date from the year and the number of days in the year."
@@ -281,6 +306,9 @@ functions:
 
         # Compute the calendar date when 122 days have passed in 2020
         date = time_conversion.year_and_days_in_year_to_calendar_date(2020, 122)
+        # Print the converted output
+        print(J2000)  # prints datetime.datetime(2020, 5, 2, 0, 0)
+
   #######################################################################
   - name: calculate_seconds_in_current_julian_day
     short_summary: "Determine the number of seconds that have elapsed in the given Julian day."
@@ -301,10 +329,11 @@ functions:
 
       .. code-block:: python
 
-        # Define the Julian date
-        julian_day = 2451545.2
         # Compute the number of seconds that have passed in the given Julian day
-        seconds_passed = time_conversion.calculate_seconds_in_current_julian_day(julian_day)
+        seconds_passed = time_conversion.calculate_seconds_in_current_julian_day(constants.JULIAN_DAY_ON_J2000)
+        # Print the converted output
+        print(seconds_passed)  # prints 43200.0
+
   #######################################################################
   - name: is_leap_year
     short_summary: "Assess wether a year is a leap year or not."
@@ -327,8 +356,13 @@ functions:
 
         # Check known leap years
         leap_years = [time_conversion.is_leap_year(year) for year in [2020, 2016, 2000, 2400]]
+        # Print the converted output
+        print(leap_years)  # prints [True, True, True, True]
         # Check known non-leap years
         non_leap_years = [time_conversion.is_leap_year(year) for year in [2021, 2022, 2100, 2001]]
+        # Print the converted output
+        print(non_leap_years)  # prints [False, False, False, False]
+
   #######################################################################
   - name: get_days_in_month
     short_summary: "Get the number of days in the month of a given year."
@@ -354,8 +388,12 @@ functions:
 
         # Check the number of days in February 2021
         days_feb_2021 = time_conversion.get_days_in_month(2, 2021)
+        # Print the converted output
+        print(days_feb_2021)  # prints 28
         # Check the number of days in February 2022
         days_feb_2020 = time_conversion.get_days_in_month(2, 2020)
+        # Print the converted output
+        print(days_feb_2020)  # prints 29
   #######################################################################
   - name: TCB_to_TDB
     short_summary: "Convert time from the TCB scale to the TDB scale."
@@ -385,6 +423,8 @@ functions:
         date_J2000_sec = time_conversion.julian_day_to_seconds_since_epoch(date_J2000)
         # Check the date from the TCB scale to the TDB scale
         date_TDB_scale = time_conversion.TCB_to_TDB(date_J2000_sec)
+        # Print the converted output
+        print(date_TDB_scale)  # prints 698384439.9176273
   #######################################################################
   - name: TDB_to_TCB
     short_summary: "Convert time from the TBD scale to the TCB scale."
