--- a/docstrings/numerical_simulation/estimation.yaml
+++ b/docstrings/numerical_simulation/estimation.yaml
@@ -1,20 +1,9 @@
-#########################################################################
-#    ███    ███  ██████  ██████  ██    ██ ██      ███████
-#    ████  ████ ██    ██ ██   ██ ██    ██ ██      ██
-#    ██ ████ ██ ██    ██ ██   ██ ██    ██ ██      █████
-#    ██  ██  ██ ██    ██ ██   ██ ██    ██ ██      ██
-#    ██      ██  ██████  ██████   ██████  ███████ ███████
-#########################################################################
-# Estimation Setup
-
 extended_summary: |
-  This module contains a set of factory functions for setting up the
-  estimation models in a simulation.
+  This module provides the functionality for functional environment
+  objects and associated functionality. Specifically, it contains the
+  models that perform computations related to environment models of
+  natural and artificial bodies.
 
-
-modules:
-  - observation
-  - parameter
 
   #########################################################################
   #  ███████ ███   ██ ██    ██ ███    ███  ██████
@@ -35,8 +24,11 @@ modules:
   #   ██████ ███████ ██      ██ ██████  ██████  ███████ ██████
   #########################################################################
 
-  # no classes
-  
+  # EstimatableParameterSet
+
+  # ObservationViabilityCalculator
+  # ObservationSimulator (_1, _2, _3, _6)
+
 
   ##############################################################################
   #  ███████ ██    ██ ███    ██  ██████ ████████ ██  ██████  ███    ██  ██████
@@ -48,28 +40,30 @@ modules:
 
 functions:
 
-  ###  EstimatableParameterSettings --> EstimatableParameterSet #
-
-  - name: create_parameters_to_estimate # [py]
-    short_summary: "Function for creating a consolidated set of estimatable parameters."
+  - name: simulate_observations # [py]
+    short_summary: "Function to perform the simulation of observations."
     extended_summary: |
-      Function for creating a consolidated parameter from the given estimatable parameter settings.
-      The function checks for consitency between the parameter settings and the models contained in the simulation setup (given by the `bodies` & and `propagator_settings` parameters).
+      Function to perform the simulation of observations from the given observation simulators and simulator settings.
 
     parameters:
+      - name: observation_to_simulate # [py]
+        type: List( :class:`~tudatpy.numerical_simulation.estimation_setup.ObservationSimulationSettings` ) # [py]
+        description: |
+
+      - name: observation_simulators # [py]
+        type: List( :class:`~tudatpy.numerical_simulation.estimation_setup.ObservationSimulatorBases` ) # [py]
+        description: |
+
       - name: bodies # [py]
         type: :class:`~tudatpy.numerical_simulation.environment_setup.SystemOfBodies` # [py]
         description: |
           Object consolidating all bodies and environment models, including ground station models, that constitute the physical environment.
 
-      - name: propagator_settings # [py]
-        type: :class:`~tudatpy.numerical_simulation.propagation_setup.propagator.PropagatorSettings # [py]
-        description: |
-          Object containing the consolidated propagation settings of the simulation.
+
 
     returns:
       type: EstimatableParameterSet
       description: |
-        Instance of :class:`~tudatpy.numerical_simulation.estimation_setup.EstimatableParameterSet` class, consolidating all estimatable parameters and simulation models.
+        Instance of :class:`~tudatpy.numerical_simulation.estimation.EstimatableParameterSet` class, consolidating all estimatable parameters and simulation models.
 
 
